# pursue

./: .gitignore  .prettierignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT_WINDOWS.md  LICENSE  PROJECT_STATUS.md  PURSUE_BLUEPRINT.md  README.md  SECURITY.md  eslint.config.js  fetch_war.py  package-lock.json  package.json  scrape_war.js  test_download.py  test_gemma.rs  test_url.js  vite.config.js  war_gov.html  war_gov_ufo.html
.github/workflows/: auto-release.yml  release.yml
docs/: DEVELOPMENT.md  RELEASES.md
scripts/: generate-updater-manifest.js
src/: app.css  app.html
src-python/: main.py  requirements.txt  test_got.py
src-tauri/: Cargo.toml  cargo.out  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  tauri.conf.json  test_rquest.rs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260509000000_initial_schema.sql  20260509010000_phase_1_3_schema.sql  20260509020000_intelligence_engine.sql  20260510000000_app_settings.sql  20260510010000_record_thumbnails.sql  20260510020000_forensic_intelligence.sql  20260510030000_vector_alignment.sql  20260510040000_vector_hardening.sql  20260510050000_intelligence_graph.sql  20260511000000_v1_baseline.sql  20260511010000_v1_cleanup_triggers.sql
src-tauri/migrations_archived/: 20260509030000_record_assets.sql
src-tauri/src/: cases.rs  commands.rs  common.rs  db.rs  exports.rs  grammar_test.rs  lib.rs  main.rs  models.rs  scraper.rs  search.rs  vault.rs
src-tauri/src/analysis/: batch_processor.rs  diagnostics.rs  entities.rs  extraction.rs  gemma4.rs  indexer.rs  mod.rs  model_manager.rs  native_macos.rs  native_windows.rs  nn.rs  ocr.rs  pdf.rs  persistence.rs  python_env.rs  registry.rs  sidecar.rs  thumbnails.rs  verifier.rs
src-tauri/src/commands/: analysis.rs  cases.rs  mod.rs  records.rs  system.rs
src-tauri/src/db/: analysis_repo.rs  mod.rs  records.rs
src-tauri/src/sources/: mod.rs  war_gov.rs  web.rs
src-tauri/test_rquest/: Cargo.toml
src-tauri/test_rquest/src/: main.rs
src-tauri/tests/: production_contract.rs
src/lib/: logger.ts  models.ts  store.ts  theme.ts  toastStore.ts  types.ts  updater.ts  utils.ts
src/lib/components/: AnalysisModal.svelte  AppDock.svelte  ArchiveViewer.svelte  DownloadAgent.svelte  EvidenceVault.svelte  FirstLaunch.svelte  ForensicAuditViewer.svelte  GlobalSearch.svelte  IntelligenceCenter.svelte  IntelligenceDossier.svelte  IntelligenceModal.svelte  LinkAnalysis.svelte  Logo.svelte  Map.svelte  MediaViewer.svelte  Settings.svelte  Toasts.svelte
src/lib/components/agent/: AssetList.svelte
src/lib/components/analysis_modal/: NeuralTelemetry.svelte  ThoughtStream.svelte
src/lib/components/dashboard/: Dashboard.svelte  EmptyState.svelte  GlobalActions.svelte  GridView.svelte  IntelCardsView.svelte  ListView.svelte
src/lib/components/dossier/: ArtifactTab.svelte  CaseWorkTab.svelte  ChunksTab.svelte  DossierHeader.svelte  DossierTabs.svelte  RawOcrTab.svelte  SynthesisTab.svelte  ThoughtsTab.svelte
src/lib/components/first_launch/: DiagnosticStep.svelte  ProvisioningStep.svelte  ReadyStep.svelte  SelectionStep.svelte
src/lib/components/intelligence_center/: CognitiveSynthesis.svelte  HardwareDiagnostics.svelte  ModelManager.svelte  VectorAnalytics.svelte
src/lib/components/intelligence_modal/: CognitiveStream.svelte  IntelligenceModalHeader.svelte  SynthesisTelemetry.svelte
src/lib/components/layout/: AmbientBackground.svelte  Footer.svelte  StatsBar.svelte  SystemSplash.svelte
src/lib/components/media/: ImageViewer.svelte  PdfViewer.svelte  VideoViewer.svelte
src/lib/components/settings/: AutomationSettings.svelte  EnvironmentSettings.svelte  HuggingFaceSettings.svelte  OptimizationSettings.svelte  PersonaSettings.svelte  ReleaseSettings.svelte
src/lib/stores/: analysisStore.svelte.ts  appStore.svelte.ts  dossierStore.svelte.ts  downloadStore.svelte.ts  intelligenceStore.svelte.ts  settingsStore.svelte.ts  synthesisStore.svelte.ts  vaultStore.svelte.ts
src/routes/: +layout.svelte  +page.svelte
