[package]
name = "pursue-data-analyzer"
version = "0.2.0"
description = "Local-first PURSUE/WAR.gov OSINT evidence analyzer"
authors = ["PURSUE Data Analyzer contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pursue_data_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
rquest = { version = "5.1.0", features = ["stream", "cookies", "json"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.33"
lazy_static = "1.5.0"
tokenizers = "0.20.0"
ort = { version = "2.0.0-rc.12", features = ["copy-dylibs"] }
# llama-cpp-2 is the robust rust wrapper for gemma/llama GGUF
llama-cpp-2 = "0.1.11"
# sqlite-vec is the modern vector search extension
sqlite-vec = "0.1.9"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
tauri-plugin-sql = "2.2.1"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-log = "2.2.0"
uuid = { version = "1.23.1", features = ["v4"] }
sha2 = "0.10.9"
hex = "0.4.3"
futures-util = "0.3.32"
lopdf = "0.40.0"
regex = "1.12.2"
url = "2.5.8"
ocrs = "0.9.0"
rten = "0.13.1"
rten-tensor = "0.13.1"
image = "0.25.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-vision = "0.3"
core-graphics = "0.24.0"
core-foundation = "0.10.0"
