[package]
name = "pursue-data-analyzer"
version = "0.6.1"
description = "Local-first PURSUE/WAR.gov OSINT evidence analyzer"
authors = ["PURSUE Data Analyzer contributors"]
edition = "2021"

[lib]
name = "pursue_data_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
rquest = { version = "5", features = ["stream", "cookies", "json"] }
rquest-util = "2"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.39"
lazy_static = "1"
sqlite-vec = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
tauri-plugin-sql = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
hex = "0.4"
futures-util = "0.3"
lopdf = "0.40"
regex = "1"
url = "2"
ocrs = "0.12"
rten = "0.24"
rten-tensor = "0.24"
image = "0.25"
strum = { version = "0.28", features = ["derive"] }
encoding_rs = "0.8"
percent-encoding = "2.3.2"
miniz_oxide = "0.9.1"
scraper = "0.26.0"
log = "0.4.29"
once_cell = "1.21.4"
futures = "0.3.32"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = "0.23"
ort = { version = "2.0.0-rc.12", features = ["copy-dylibs"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL", "NSString", "NSArray", "NSDictionary", "NSError"] }
objc2-vision = { version = "0.3", features = ["VNRequestHandler", "VNRecognizeTextRequest", "VNRequest", "VNTypes"] }
objc2-pdf-kit = { version = "0.3", features = ["PDFDocument", "PDFPage"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSImage"] }
accelerate-src = "0.3"
